name:                sealchain-cluster
version:             0.0.1
synopsis:            Utilities to generate and run cluster of nodes
description:         See README
copyright:           2018 SEAL
license:             MIT
license-file:        LICENSE
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:   Haskell2010
  default-extensions: DeriveGeneric
                      LambdaCase
                      NoImplicitPrelude
                      OverloadedStrings
                      TupleSections
                      TypeApplications
                      ScopedTypeVariables

  hs-source-dirs:     src

  build-depends: base >=4.7 && <5

               , sealchain
               , sealchain-chain
               , sealchain-core
               , sealchain-infra
               , sealchain-networking
               , sealchain-node
               , sealchain-util
               , sealchain-x509

               , aeson
               , async
               , attoparsec
               , bytestring
               , containers
               , directory
               , filepath
               , formatting
               , iproute
               , lens
               , optparse-applicative
               , parsec
               , safe
               , servant-client
               , temporary
               , text
               , time
               , tls
               , universum

  exposed-modules: Cardano.Cluster
                   Cardano.Cluster.Environment
                   Cardano.Cluster.Util


test-suite sealchain-cluster-test
  default-language:   Haskell2010
  default-extensions: DeriveGeneric
                      LambdaCase
                      NoImplicitPrelude
                      OverloadedStrings
                      TupleSections
                      TypeApplications
                      ScopedTypeVariables

  type:               exitcode-stdio-1.0

  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:      Cardano.Cluster.Util.Arbitrary
                      Cardano.Cluster.Util.Spec
                      Cardano.Cluster.Environment.Arbitrary
                      Cardano.Cluster.Environment.Spec

  build-depends:      base
                    , sealchain-cluster
                    , sealchain-core
                    , sealchain-infra
                    , async
                    , containers
                    , lens
                    , QuickCheck
                    , time
                    , universum


executable sealchain-cluster-demo
  ghc-options:        -threaded -O2 -rtsopts
  default-language:   Haskell2010
  default-extensions: DeriveGeneric
                      LambdaCase
                      NoImplicitPrelude
                      OverloadedStrings
                      TupleSections
                      TypeApplications
                      ScopedTypeVariables

  hs-source-dirs:     app/demo
  main-is:            Main.hs

  build-depends:      base
                    , sealchain
                    , sealchain-cluster
                    , sealchain-node
                    , ansi-terminal
                    , async
                    , containers
                    , docopt
                    , formatting
                    , lens
                    , universum


executable sealchain-cluster-prepare-environment
  ghc-options:        -threaded -O2 -rtsopts
  default-language:   Haskell2010
  default-extensions: DeriveGeneric
                      LambdaCase
                      NoImplicitPrelude
                      OverloadedStrings
                      TupleSections
                      TypeApplications
                      ScopedTypeVariables

  hs-source-dirs:     app/prepare-environment
  main-is:            Main.hs

  build-depends:      base
                    , sealchain-cluster
                    , containers
                    , docopt
                    , formatting
                    , lens
                    , universum
