name:                sealchain-explorer
version:             0.0.1
synopsis:            Sealchain explorer
description:         Please see README.md
license:             MIT
license-file:        LICENSE
copyright:           2018 SEAL
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:      Pos.Explorer.ExplorerMode

                        Pos.Explorer.Core
                        Pos.Explorer.DB
                        Pos.Explorer.ExtraContext
                        Pos.Explorer.Socket
                        Pos.Explorer.Socket.App
                        Pos.Explorer.Socket.Holder
                        Pos.Explorer.Socket.Methods
                        Pos.Explorer.Socket.Util

                        Pos.Explorer.Txp

                        Pos.Explorer.Web
                        Pos.Explorer.Web.Api
                        Pos.Explorer.Web.ClientTypes
                        Pos.Explorer.Web.Error
                        Pos.Explorer.Web.TestServer
                        Pos.Explorer.Web.Server
                        Pos.Explorer.Web.Transform

                        Pos.Explorer.TestUtil

  other-modules:        Pos.Explorer.Aeson.ClientTypes

                        Pos.Explorer.Core.Types
                        Pos.Explorer.Txp.Common
                        Pos.Explorer.Txp.Global
                        Pos.Explorer.Txp.Local
                        Pos.Explorer.Txp.Toil
                        Pos.Explorer.Txp.Toil.Logic
                        Pos.Explorer.Txp.Toil.Monad
                        Pos.Explorer.Txp.Toil.Types
                        Pos.Explorer.BListener

                        Paths_sealchain_explorer

  build-depends:        QuickCheck
                      , aeson
                      , base
                      , bytestring
                      , conduit
                      , containers
                      , data-default
                      , ether >= 0.5.1
                      , exceptions
                      , formatting
                      , free
                      , lens
                      , memory
                      , mmorph
                      , resourcet
                      , rocksdb-haskell-ng
                      , safe-exceptions
                      , serokell-util
                      , stm
                      , text
                      , formatting
                      , time
                      , time-units
                      , transformers
                      , universum
                      , unliftio
                      , unordered-containers
                      , vector

                      , sealchain
                      , sealchain-binary
                      , sealchain-chain
                      , sealchain-chain-test
                      , sealchain-core
                      , sealchain-crypto
                      , sealchain-crypto-test
                      , sealchain-db
                      , sealchain-generator
                      , sealchain-infra
                      , sealchain-util

                      -- mtl ++
                      , mtl

                      -- servant
                      , servant
                      , servant-server
                      , http-types

                      -- socket-io + deps
                      , socket-io
                      , engine-io
                      , engine-io-wai
                      , wai
                      , wai-extra
                      , wai-cors
                      , warp
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:         -Wall
                       -O2

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        TemplateHaskell
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        ScopedTypeVariables
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold


executable sealchain-explorer
  hs-source-dirs:      src/explorer
  main-is:             Main.hs
  other-modules:       ExplorerNodeOptions
                       Paths_sealchain_explorer
  build-depends:       base
                     , sealchain
                     , sealchain-chain
                     , sealchain-core
                     , sealchain-infra
                     , sealchain-explorer
                     , sealchain-util
                     , optparse-applicative
                     , universum
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -with-rtsopts=-N
                       -O2

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

executable sealchain-explorer-hs2purs
  hs-source-dirs:      src/purescript
  main-is:             Main.hs
  other-modules:       PSTypes
                       PSOptions
                       Paths_sealchain_explorer
  build-depends:       base
                     , sealchain-explorer
                     , purescript-bridge
                     , universum
                     , optparse-simple
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -with-rtsopts=-N
                       -O2

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

executable sealchain-explorer-swagger
  hs-source-dirs:      src/documentation
  main-is:             Main.hs
  other-modules:       Paths_sealchain_explorer
  build-depends:       aeson
                     , base
                     , bytestring
                     , sealchain-explorer
                     , lens
                     , optparse-applicative
                     , servant-multipart
                     , servant-server
                     , servant-swagger
                     , swagger2
                     , universum >= 0.1.11
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -with-rtsopts=-N
                       -O2

  default-extensions:   NoImplicitPrelude
                        BangPatterns
                        OverloadedStrings
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

executable sealchain-explorer-mock
  hs-source-dirs:      src/mock
  main-is:             Main.hs
  other-modules:       Paths_sealchain_explorer
  build-depends:       base
                     , sealchain-explorer
                     , optparse-applicative
                     , universum
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -with-rtsopts=-N
                       -O2

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

test-suite sealchain-explorer-test
  main-is:             Test.hs
  other-modules:
                       -- Standard module with some magic
                       Spec
                       -- Arbitrary instances
                       Test.Pos.Explorer.Arbitrary
                       -- Utils
                       Test.Pos.Explorer.MockFactory
                       -- Tests
                       Test.Pos.Explorer.Socket.AppSpec
                       Test.Pos.Explorer.Socket.MethodsSpec
                       Test.Pos.Explorer.Socket.UtilSpec
                       Test.Pos.Explorer.Web.ServerSpec
                       Test.Pos.Explorer.Web.ClientTypesSpec

                       -- Test.Pos.Explorer.BListenerSpec -- TODO(KS): To merge when we merge tests.
                       Test.Pos.Explorer.Identity.BinarySpec

  type:                exitcode-stdio-1.0
  build-depends:       QuickCheck
                     , base
                     , bytestring
                     , sealchain
                     , sealchain-binary-test
                     , sealchain-chain-test
                     , sealchain-core
                     , sealchain-core-test
                     , sealchain-crypto
                     , sealchain-explorer
                     , sealchain-chain
                     , sealchain-util
                     , containers
                     , cryptonite
                     , engine-io
                     , generic-arbitrary
                     , hspec
                     , lens
                     , universum >= 0.1.11
                     , warp
  build-tool-depends: hspec-discover:hspec-discover

  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
                       -Wall

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

benchmark sealchain-explorer-bench
  hs-source-dirs:      bench
  main-is:             Main.hs
  other-modules:       Bench.Pos.Explorer.ServerBench
  type:                exitcode-stdio-1.0
  build-depends:       QuickCheck
                     , base
                     , sealchain
                     , sealchain-chain-test
                     , sealchain-explorer
                     , criterion
                     , universum >= 0.1.11
                     , weigh
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
