name:                sealchain-generator
version:             0.0.1
synopsis:            Sealchain - arbitrary data generation
description:         Sealchain - arbitrary data generation
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2018 SEAL
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
                       Pos.Generator
                       Pos.Generator.Block

                       Pos.Generator.BlockEvent
                       Pos.Generator.BlockEvent.DSL

                       -- Common code for tests
                       Test.Pos.Block.Logic.Mode
                       Test.Pos.Block.Logic.Emulation
                       Test.Pos.Block.Logic.Util
                       Test.Pos.Block.Logic.Event

  other-modules:
                       Pos.Generator.Block.Error
                       Pos.Generator.Block.Logic
                       Pos.Generator.Block.Mode
                       Pos.Generator.Block.Orphans
                       Pos.Generator.Block.Param
                       Pos.Generator.Block.Payload

  build-depends:       MonadRandom
                     , QuickCheck
                     , base
                     , bytestring
                     , sealchain
                     , sealchain-chain
                     , sealchain-chain-test
                     , sealchain-client
                     , sealchain-core
                     , sealchain-core-test
                     , sealchain-crypto
                     , sealchain-db
                     , sealchain-infra
                     , sealchain-util
                     , containers
                     , cryptonite
                     , data-default
                     , ether
                     , exceptions
                     , formatting
                     , lens
                     , monad-control
                     , random
                     , safe-exceptions
                     , serokell-util
                     , text
                     , formatting
                     , time-units
                     , transformers-base
                     , universum
                     , unliftio
                     , unordered-containers
                     , vector


  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options:         -Wall
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

test-suite sealchain-generator-test
  main-is:             Test.hs
  other-modules:
                       Spec

                       Test.Pos.Binary.CommunicationSpec
                       Test.Pos.Block.Logic.CreationSpec
                       Test.Pos.Block.Logic.VarSpec
                       Test.Pos.Block.Property
                       Test.Pos.Generator.Block.LrcSpec

  type:                exitcode-stdio-1.0

  build-depends:       MonadRandom
                     , QuickCheck
                     , base
                     , bytestring
                     , sealchain
                     , sealchain-binary
                     , sealchain-chain
                     , sealchain-chain-test
                     , sealchain-core
                     , sealchain-crypto
                     , sealchain-db
                     , sealchain-generator
                     , sealchain-util
                     , sealchain-util-test
                     , containers
                     , data-default
                     , formatting
                     , hspec
                     , lens
                     , safe-exceptions
                     , serokell-util
                     , universum >= 0.1.11
                     , unordered-containers
  build-tool-depends: hspec-discover:hspec-discover

  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
                       -Wall

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        GADTs
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

benchmark sealchain-verification-bench
  hs-source-dirs:       bench
  main-is:              Main.hs
  other-modules:        Bench.Pos.Criterion.Block.Logic
  type:                 exitcode-stdio-1.0
  build-depends:        base
                      , sealchain
                      , sealchain-chain
                      , sealchain-chain-test
                      , sealchain-core
                      , sealchain-crypto
                      , sealchain-db
                      , sealchain-generator
                      , sealchain-util
                      , criterion
                      , MonadRandom
                      , random
                      , time-units
                      , universum >= 0.1.11
                      , serokell-util
  default-language:     Haskell2010
  ghc-options:          -threaded
                        -rtsopts
                        -Wall
                        -O2
  if os(linux)
    ghc-options:        -optl-fuse-ld=gold
    ld-options:         -fuse-ld=gold
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        TypeApplications
                        TypeFamilies
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        GADTs
                        MonadFailDesugaring
  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

executable sealchain-verification-bench-exe
  hs-source-dirs:       app
  main-is:              VerificationBench.hs
  build-depends:        base
                      , bytestring
                      , sealchain
                      , sealchain-binary
                      , sealchain-chain
                      , sealchain-core
                      , sealchain-crypto
                      , sealchain-db
                      , sealchain-generator
                      , sealchain-util
                      , containers
                      , deepseq
                      , directory
                      , formatting
                      , MonadRandom
                      , optparse-applicative
                      , random
                      , text
                      , time-units
                      , universum >= 0.1.11
  default-language:     Haskell2010
  ghc-options:        -threaded
                      -rtsopts
                      -Wall
                      -main-is VerificationBench
                      -O2
  if os(linux)
    ghc-options:        -optl-fuse-ld=gold
    ld-options:         -fuse-ld=gold
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        TypeApplications
                        TypeFamilies
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        GADTs
                        MonadFailDesugaring
  build-tools: cpphs >= 1.19
  ghc-options: -threaded -pgmP cpphs -optP --cpp
