name:                sealchain-mnemonic
version:             0.0.1
synopsis:            TODO
description:         See README
copyright:           2018 SEAL
license:             MIT
license-file:        LICENSE
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:   Haskell2010
  default-extensions: DeriveGeneric
                      LambdaCase
                      NoImplicitPrelude
                      OverloadedStrings
                      TupleSections
                      TypeApplications
                      ScopedTypeVariables

  hs-source-dirs:     src

  build-depends: base >=4.7 && <5
               , QuickCheck
               , aeson
               , basement
               , bytestring
               , cardano-crypto
               , sealchain
               , sealchain-core
               , sealchain-crypto
               , sealchain-infra
               , cryptonite
               , data-default
               , formatting
               , lens
               , memory
               , swagger2
               , text
               , time
               , universum

  exposed-modules: Cardano.Mnemonic


test-suite sealchain-mnemonic-test
  default-language:   Haskell2010

  type:               exitcode-stdio-1.0
  default-extensions: DeriveGeneric
                      LambdaCase
                      NoImplicitPrelude
                      OverloadedStrings
                      TupleSections
                      TypeApplications
                      ScopedTypeVariables

  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:      Cardano.MnemonicSpec

  build-depends:      base
                    , hspec
                    , universum
                    , sealchain-mnemonic
                    , bytestring
                    , QuickCheck
                    , sealchain-crypto
                    , data-default
                    , aeson
                    , cardano-crypto


executable sealchain-generate-mnemonic
  main-is:            Main.hs
  hs-source-dirs:     generate-mnemonic
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
                      base
                    , aeson
                    , sealchain-mnemonic
                    , bytestring
                    , text
                    , universum
  default-language:   Haskell2010
  default-extensions: NoImplicitPrelude
