name:                sealchain-node
version:             0.0.1
synopsis:            Sealchain simple node executable
description:         Provides a 'sealchain-node-simple' executable which can
                     connect to the Sealchain network and act as a full node
                     but does not have any wallet capabilities.
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2018 SEAL
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base
                     , aeson
                     , async
                     , bytestring
                     , sealchain
                     , sealchain-chain
                     , sealchain-core
                     , sealchain-crypto
                     , sealchain-db
                     , sealchain-infra
                     , sealchain-networking
                     , sealchain-node-ipc
                     , sealchain-util
                     , sealchain-x509
                     , connection
                     , data-default
                     , http-client
                     , http-client-tls
                     , http-media
                     , http-types
                     , lens
                     , serokell-util
                     , servant-client
                     , servant-server
                     , servant-swagger
                     , servant-swagger-ui
                     , stm
                     , swagger2
                     , text
                     , time-units
                     , tls
                     , universum
                     , wai
                     , warp
                     , x509
                     , x509-store

  exposed-modules:     Cardano.Node.API
                       Cardano.Node.API.Swagger
                       Cardano.Node.Client
                       Cardano.Node.Manager
                       Cardano.Node.NodeStateAdaptor

  other-modules:       Paths_sealchain_node

  default-language:    Haskell2010
  ghc-options:         -Wall

  default-extensions: TypeOperators
                      DataKinds
                      DefaultSignatures
                      NoImplicitPrelude
                      MultiParamTypeClasses
                      OverloadedStrings
                      ScopedTypeVariables
                      FlexibleInstances
                      FlexibleContexts
                      TypeFamilies
                      TypeApplications
                      TypeOperators
                      TemplateHaskell
                      RecordWildCards
                      ScopedTypeVariables
                      UndecidableInstances
                      MonadFailDesugaring
                      TupleSections

executable sealchain-node-simple
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , sealchain-chain
                     , sealchain-core
                     , sealchain-util
                     , sealchain-node
                     , sealchain
                     , universum >= 0.1.11
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        GADTs
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

test-suite property-tests
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ChainExtension
                       Translation

                       Chain.Abstract
                       Chain.Abstract.FinitelySupportedFunction
                       Chain.Abstract.Repartition
                       Chain.Abstract.Translate.FromUTxO
                       -- Chain.Abstract.Translate.ToCardano
                       Chain.Abstract.Translate.Policies
                       Chain.Policy
                       Infrastructure.Generator

  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , HUnit
                     , QuickCheck
                     , sealchain-core
                     , sealchain-utxo
                     , containers
                     , data-default >= 0.7
                     , hashable
                     , hspec
                     , lens
                     , mtl
                     , text
                     , universum >= 0.1.11
                     , validation
  ghc-options:
                       -threaded
                       -rtsopts
                       -Wall


  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        GADTs
                        MonadFailDesugaring
